--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -25,22 +25,22 @@
 }
 
 .upload-button-loader{
-  width: 7%;
-  height: 7%;
+  width: 6%;
+  height: 6%;
   pointer-events: none; 
 }
 
 .loader {
-  width: 40%;
-  height: 20%;
+  width: 100px;
+  height: 100px;
   pointer-events: none;
-  top: 120px;
   position: absolute;
+  top: 130px; 
   left: 50%;
-  margin-left: -20%;
+  margin-left: -52px;
 }
 
-.umbrellaImage{
+.umbrella-image{
   width:400px;
   position: relative;  
   margin:20px,auto;
@@ -109,7 +109,7 @@
   justify-content: center;
 }
 
-.customizeTitle{ 
+.custom-title{ 
   font-weight: 'bold';
   font-size: '26px';
 }
@@ -118,14 +118,11 @@
   color: white;
   padding-left: 10%;
   padding-right:10%;
+  padding-top:7px;
   overflow: hidden;
   white-space: nowrap; 
   width: 80%;
   text-overflow: ellipsis; 
-}
-
-.myUpload{
-  background-color: blueviolet;
 }
 
 .title{
@@ -152,6 +149,21 @@
   }
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  .upload-button-loader {
+    animation: upload-button-loader-spin infinite 20s linear;
+  }
+}
+
+@keyframes upload-button-loader-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 @media screen and (max-width: 600px) {
   .umbrellaImage{
     width: 200px;
@@ -165,10 +177,14 @@
   .upload-button{
     width: 100%;    
   }
+  .title{
+    justify-content: center;
+    font-size: 30px;
+  }
   .color-options{
     justify-content: center;
   }
-  .customizeTitle{
+  .custom-title{
     font-size: 18px;
   }
 }
@@ -179,7 +195,7 @@
   }
 
   .loader{
-    top:100px
+    top:80px
   }
   .logo{
     top:220px
@@ -192,11 +208,12 @@
   }
   .title{
     justify-content: center;
+    font-size: 40px;
   }
   .color-options{
     justify-content: center;
   }
-  .customizeTitle{
+  .custom-title{
     font-size: 20px;
   }
 }
