--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -16,8 +16,8 @@
 }
 
 .logo{
-  width: 10%;
-  height:5%;
+  width: 70px;
+  height:30px;
   position: absolute;
   top:300px;
   left: 50%;
@@ -169,7 +169,7 @@
     width: 200px;
   }
   .logo{
-    top:150px
+    top:250px
   }
   .loader{
     top:85px
@@ -198,7 +198,7 @@
     top:80px
   }
   .logo{
-    top:220px
+    top:300px
   }
   .upload-button{
     width: 100%;
