--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -16,7 +16,7 @@
 }
 
 .logo{
-  width: 70px;
+  width: 80px;
   height:30px;
   position: absolute;
   top:300px;
@@ -187,6 +187,10 @@
   .custom-title{
     font-size: 18px;
   }
+  .image-options{
+    text-align: center;
+    margin-top: 70%;
+  }
 }
 
 @media screen and (max-width: 992px) {
@@ -205,6 +209,7 @@
   }
   .image-options{
     text-align: center;
+    margin-top: 70%;
   }
   .title{
     justify-content: center;
